# qt-cmake

./: CMakeLists.txt  README.md  config.h  main.cpp  mainwindow.cpp  mainwindow.h
gen_data/: ffts_NFFT=16384_N=20.32f  gen_data.py
qt/: entry.cpp  entry.h  mainwindow.cpp  mainwindow.h
sdr/: entry.cpp  entry.h
